--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav" id="navbar-links">
                     <li><a href="index.html">Portfolio</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li id="active"><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
