--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <ul class="nav navbar-nav" id="navbar-links">
                     <li><a href="index.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li id="active"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
