Removed Portfolio Page, Added Home, Added Loading Welcome Text, Put Paragraphs in a .text-container

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav" id="navbar-links">
-                    <li><a href="index.html">Portfolio</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li id="active"><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -42,18 +42,20 @@
                 <div class="pimg-border">
                     <img src="img/jbug.jpg" class="img-circle img-profile">
                 </div>
-                <p>Hi, I'm Juliette! I'm a young coffee enthusiast who enjoys big words and Harry Potter. I love mid-night hikes, hand-lettering and design, and have mastered the art of soliloquy. Most of my time is spent drawing tattoos or other designs for friends and dabbling in the world of creative writing -- oh, and I really love math.</p>
-                <p>Currently, I am in the midst of mastering front-end web development, which has allowed for another productive and innovative outlet for me. I'm eager to find an opportunity where I can be passionate about my work and the team I work with.
-                </p>
+                <div class="text-container">
+                    <p>Hi, I'm Juliette! I'm a young coffee enthusiast who enjoys big words and Harry Potter. I love mid-night hikes, hand-lettering and design, and have mastered the art of soliloquy. Most of my time is spent drawing tattoos or other designs for friends and dabbling in the world of creative writing -- oh, and I really love math.</p><br>
+                    <p>Currently, I am in the midst of mastering front-end web development, which has allowed for another productive and innovative outlet for me. I'm eager to find an opportunity where I can be passionate about my work and the team I work with.
+                    </p>
+                </div>
                 <div class="row">
                     <div class="col-md-12 footer">
-                      <p class="copyright">&copy; 2017 Juliette Abeyta</p>
+                        <p class="copyright">&copy; 2017 Juliette Abeyta</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
 </body>
