--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav" id="navbar-links">
-                    <li><a href="index.html">Portfolio</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li id="active"><a href="contact.html">Contact</a></li>
                 </ul>
@@ -39,14 +39,19 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-6 content-box">
                 <h3>goals</h3>
-                <p>I am looking for a challenging, career-starting, enjoyable position. I have a vehement interest in the expanding world of web development and have been studying front and back-end development both in and out of school.</p>
-                <p>Front-end development especially has allowed me to explore the capacities of my creative and technical abilities. This is where my career goals are set, and where I am spending most of my time improving.</p>
+                <div class="text-container">
+                    <p>I am looking for a challenging, career-starting, enjoyable position. I have a vehement interest in the expanding world of web development and have been studying front and back-end development both in and out of school.</p>
+                    <br>
+                    <p>Front-end development especially has allowed me to explore the capacities of my creative and technical abilities. This is where my career goals are set, and where I am spending most of my time improving.</p>
+                </div>
                 <h3>contact information</h3>
-                <ul class="fa-ul">
-                    <li><i class="fa-li fa fa-phone"></i><a href="tel:303-434-5300">303-434-5300</a></li>
-                    <li><i class="fa-li fa fa-envelope"></i><a href="mailto:junebug@yooo.com">juneauwh0a@gmail.com</a></li>
-                    <li><i class="fa-li fa fa-facebook"></i><a href="http://facebook.com/juneauwh0a">Juliette Abeyta</a></li>
-                </ul>
+                <div class="text-container">
+                    <ul class="fa-ul">
+                        <li><i class="fa-li fa fa-phone"></i><a href="tel:303-434-5300">303-434-5300</a></li>
+                        <li><i class="fa-li fa fa-envelope"></i><a href="mailto:junebug@yooo.com">juneauwh0a@gmail.com</a></li>
+                        <li><i class="fa-li fa fa-facebook"></i><a href="http://facebook.com/juneauwh0a">Juliette Abeyta</a></li>
+                    </ul>
+                </div>
                 <div class="row">
                     <div class="col-md-12 footer">
                         <p class="copyright">&copy; 2017 Juliette Abeyta</p>
