Fixed placeholder email, ya geek.

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 <div class="text-container">
                     <ul class="fa-ul">
                         <li><i class="fa-li fa fa-phone"></i><a href="tel:303-434-5300">303-434-5300</a></li>
-                        <li><i class="fa-li fa fa-envelope"></i><a href="mailto:junebug@yooo.com">juneauwh0a@gmail.com</a></li>
+                        <li><i class="fa-li fa fa-envelope"></i><a href="mailto:juneauwh0a@gmail.com">juneauwh0a@gmail.com</a></li>
                         <li><i class="fa-li fa fa-facebook"></i><a href="http://facebook.com/juneauwh0a">Juliette Abeyta</a></li>
                     </ul>
                 </div>
