--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                     <br>
                     <p>Front-end development especially has allowed me to explore the capacities of my creative and technical abilities. This is where my career goals are set, and where I am spending most of my time improving.</p>
                 </div>
-                <h3>contact information</h3>
+                <h3>keep in touch!</h3>
                 <div class="text-container">
                     <ul class="fa-ul">
                         <li><i class="fa-li fa fa-phone"></i><a href="tel:303-434-5300">303-434-5300</a></li>
