Added coffeebabe link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>Hello! This site is my ever-evolving showcase of the skills that I am acquiring in my journey to mastering front-end web development. I am just now being introduced to Javascript and have put my Bootstrap skills to work building this site. This is where I will build a portfolio of experience and projects that I will complete using the skill set I am working to prep and polish for future employment in front-end development. Feel free to explore to learn more about me and my career goals. If you have any questions, all of my means of contact can be found in the contact page!</p>
                 </div>
                 <div class="gallery">
-                    <a href="#coffeebabe">
+                    <a href="/coffeebabe">
                         <img src="img/coffeebabe.jpg">
                         <div class="overlay">
                             <p class="text">Bootstrap and Sass</p>
