--- a/index.html
+++ b/index.html
@@ -41,13 +41,19 @@
                 </div>
             </div>
         </div>
-        <div class="row gallery">
+        <div class="row">
             <div class="col-md-12">
-                <a href="/coffeebabe" id="coffeebabe">
-                <img src="img/coffeeimg.jpg">
-                </a>
+                <h1>projects</h1>
+                <div class="gallery">
+                    <a href="/coffeebabe" id="coffeebabe">
+                        <div class="overlay">
+                            <div class="text">Bootstrap &amp; Sass</div>
+                        </div>
+                        <img src="img/coffeeimg.jpg">
+                    </a>
+                </div>
             </div>
-        </div>       
+        </div>
     </div>
     <div class="container-fluid">
         <div class="row">
