Changed SASS to Sass

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="gallery">
                     <a href="/coffeebabe" id="coffeebabe">
                         <div class="overlay">
-                            <div class="text">Bootstrap &amp; SASS</div>
+                            <div class="text">Bootstrap &amp; Sass</div>
                         </div>
                         <img src="img/coffeeimg.jpg">
                     </a>
